src/argocd/apps/base/nginx/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-ui
  namespace: nginx
spec:
  parentRefs:
    - name: contour-gateway-api
      namespace: contour-system
  hostnames: ["myapp.tuto.mombesoft.com"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx
          port: 80
